--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </ul>
 
       <h1 class="mainheader">Hello World!</h1>
+    <p>THIS IS PROOF ITS WORKINGGGGGG</p>
       <h3 class="welcome"> My name is Alyssa Guzman, welcome to my website.</h3>
       <img src="headshot.jpg" alt="Alyssa Guzman Headshot">
 </body>
